--- a/PriorityQueue/PriorityQueue.csproj
+++ b/PriorityQueue/PriorityQueue.csproj
@@ -63,6 +63,7 @@
     <Compile Include="SortedArrayPriorityQueue.cs" />
     <Compile Include="SortedLinkedPriorityQueue.cs" />
     <Compile Include="UnsortedArrayPriorityQueue.cs" />
+    <Compile Include="UnsortedLinkedPriorityQueue.cs" />
     <EmbeddedResource Include="QueueManager.resx">
       <DependentUpon>QueueManager.cs</DependentUpon>
     </EmbeddedResource>
