--- a/PriorityQueue/PriorityQueue.csproj
+++ b/PriorityQueue/PriorityQueue.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HeapPriorityQueue.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="PriorityItem.cs" />
     <Compile Include="PriorityQueue.cs" />
