--- a/PriorityQueue.Tests/PriorityQueue.Tests.csproj
+++ b/PriorityQueue.Tests/PriorityQueue.Tests.csproj
@@ -112,7 +112,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="PriorityQueueTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
